# OPA24-project-hr-analytics-dashboard

./: .gitignore  README.md  app.py  config.py  css.py  distinct_occupations.py  first_time_run.py  generate_and_deploy_docs.py  geo_coverage.py  geographical_coverage.py  main.py  municipality_coverage.py  occupation_trends.py  requirements.lock.txt  requirements.txt  summary.py  top_employers.py  trends_over_time.py
.streamlit/: config.toml
ai/: chat.py  gemini.py  gemini_analyze_description.py  gemini_database_access.py  gemini_personality.py  gemini_response_format.py  gemini_tool_instructions.py
dashboard/: css.py  geo_coverage.py  occupation_trends.py  plots.py  sidebar_stats.py  summary.py  top_employers.py  top_skills.py  utils.py
docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
hr_project/: dbt_project.yml
hr_project/macros/: normalize_all_strings.sql
hr_project/models/: schema.yml
hr_project/tests/: test_duplicate_primary_keys.sql  test_missing_occupation_id.sql
job_market/: dbt_project.yml
job_market/macros/: capitalize_first_letter.sql  generate_schema_name.sql  normalize_all_strings.sql  schema.yml
job_market/models/: schema.yml  sources.yml
job_market/tests/: schema.yml  test_driving_without_license.sql  (+5 more)
orchestration/: README.md  pyproject.toml  setup.py
orchestration/orchestration/: assets.py  definitions.py  jobs.py  schedules.py  sensors.py
pipeline/: db.py  pipeline.py  resources.py  utils.py
scripts/: first_time_run.py  generate_and_deploy_docs.py
(+76 files in other folders)
