[project]
name = "orchestration"
version = "0.1.0"
description = "Job market dashboard orchestration"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",   
    "dagster-dlt",
    "dlt[duckdb]",
    "dbt-duckdb",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "orchestration.definitions"
code_location_name = "orchestration"

[tool.setuptools.packages.find]
exclude=["orchestration_tests"]
